--- a/app/src/main/res/layout/admin_scoreboard.xml
+++ b/app/src/main/res/layout/admin_scoreboard.xml
@@ -5,140 +5,143 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Adminscoreboard"
     android:padding="10dp"
-    >
+    tools:context=".Adminscoreboard">
 
     <include
-        layout="@layout/toolbar"
         android:id="@+id/toolbar"
-        />
+        layout="@layout/toolbar" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Block"
         android:layout_marginTop="70dp"
-        android:textStyle="bold"
         android:background="@color/white"
         android:padding="10dp"
-        android:textSize="20sp" />
+        android:text="@string/Block"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <Spinner
+        android:id="@+id/spinner1"
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_marginStart="235dp"
+        android:layout_marginLeft="250dp"
         android:layout_marginTop="70dp"
         android:layout_marginEnd="10dp"
-        android:id="@+id/spinner1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="250dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Gold_medal"
-        android:layout_marginTop="130dp"
-        android:textStyle="bold"
-        android:background="@color/white"
-        android:padding="10dp"
-        android:textSize="20sp" />
-
-    <EditText
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginEnd="10dp"
-        android:inputType="number"
-android:autofillHints="@string/Gold_medal"
-android:hint="@string/Gold_medal"
-        android:maxLength="2"
-
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="250dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Silver_medal"
-        android:layout_marginTop="190dp"
-        android:textStyle="bold"
-        android:background="@color/white"
-        android:padding="10dp"
-        android:textSize="20sp" />
-
-    <EditText
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="190dp"
-        android:layout_marginEnd="10dp"
-        android:inputType="number"
-        android:maxLength="2"
-android:hint="@string/Silver_medal"
-        android:autofillHints="@string/Silver_medal"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="250dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Bronze_medal"
-        android:layout_marginTop="250dp"
-        android:textStyle="bold"
-        android:background="@color/white"
-        android:padding="10dp"
-        android:textSize="20sp" />
-
-    <EditText
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="10dp"
-        android:inputType="number"
-        android:maxLength="2"
-android:autofillHints="@string/Bronze_medal"
-        android:hint="@string/Bronze_medal"
-        android:layout_marginLeft="260dp"
         android:layout_marginRight="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Score"
-        android:layout_marginTop="310dp"
-        android:textStyle="bold"
+        android:layout_marginTop="130dp"
         android:background="@color/white"
         android:padding="10dp"
-
-        android:textSize="20sp" />
+        android:text="@string/Gold_medal"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <EditText
+        android:id="@+id/gold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="250dp"
+        android:layout_marginLeft="250dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:autofillHints="@string/Gold_medal"
+        android:hint="@string/Gold_medal"
+
+        android:inputType="number"
+        android:maxLength="2" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="190dp"
+        android:background="@color/white"
+        android:padding="10dp"
+        android:text="@string/Silver_medal"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/silver"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="250dp"
+        android:layout_marginLeft="250dp"
+        android:layout_marginTop="190dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:autofillHints="@string/Silver_medal"
+        android:hint="@string/Silver_medal"
+        android:inputType="number"
+        android:maxLength="2" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:background="@color/white"
+        android:padding="10dp"
+        android:text="@string/Bronze_medal"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/bronze"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="250dp"
+        android:layout_marginLeft="260dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:autofillHints="@string/Bronze_medal"
+        android:hint="@string/Bronze_medal"
+        android:inputType="number"
+        android:maxLength="2" />
+
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="310dp"
+        android:background="@color/white"
+        android:padding="10dp"
+        android:text="@string/Score"
+        android:textSize="20sp"
+
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/score"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="250dp"
+        android:layout_marginLeft="250dp"
         android:layout_marginTop="310dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:autofillHints="@string/Score"
         android:hint="@string/Score"
         android:inputType="number"
-        android:maxLength="3"
-        android:autofillHints="@string/Score"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="250dp"
-        />
+        android:maxLength="3" />
 
     <Button
+        android:id="@+id/submit"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="@string/submit"
-        android:layout_marginTop="400dp"
         android:layout_marginLeft="35dp"
+        android:layout_marginTop="400dp"
         android:layout_marginRight="35dp"
-        android:textStyle="italic"
         android:background="@color/yellow"
+        android:text="@string/submit"
+        android:textSize="30sp"
 
-        android:textSize="30sp" />
+        android:textStyle="italic" />
 
 </RelativeLayout>
