--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
                 android:layout_marginTop="40dp">
 
             <EditText
-                android:id="@+id/ed_email"
+                android:id="@+id/ed_name"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_marginTop="42dp"
