--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -68,7 +68,7 @@
 
 
                 <EditText
-                    android:id="@+id/ed_email"
+                    android:id="@+id/ed_name"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_marginTop="42dp"
