xml layout of activity_admin_login.xml activity_club.xml activity_registration.xml activity_login.xml changed java file of LoginActivity.java changed (ed_email) no warnings except unidentified attributes in xml 0 errors

--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,9 +9,9 @@
     >
 
     <LinearLayout
-        android:background="@drawable/university"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/official_logo"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,10 +21,9 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:background="@drawable/bd_card"
         android:orientation="vertical"
-        android:padding="40dp"
+        android:padding="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Admin Login"
+            android:text="@string/admin_login"
             android:textSize="28sp"
             android:textStyle="bold"
             android:textColor="#0F0F0F"
@@ -54,7 +54,7 @@
                 android:hint="@string/email"
                 android:ems="10"
                 android:autofillHints="@string/email"
-                />
+                 />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,7 +71,8 @@
                 android:background="@drawable/bgedittext"
                 android:ems="10"
                 android:hint="@string/password"
-                android:autofillHints="@string/password" />
+                android:autofillHints="@string/password"
+                android:inputType="textPassword" />
 
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -85,9 +86,9 @@
             android:layout_marginTop="32dp"
             android:onClick="Login"
             android:background="@drawable/bg_btn"
-            android:text="sign In"
+            android:text="@string/login"
             android:textColor="#FFFFFF"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
 
     </LinearLayout>
