--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,20 +7,19 @@
     tools:context=".LoginActivity"
     >
 
-        <LinearLayout
-            android:background="@drawable/university"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:background="@drawable/official_logo"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="150dp"
+        android:layout_height="150dp"/>
 
         <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:background="@drawable/bd_card"
         android:orientation="vertical"
         android:padding="40dp"
@@ -54,7 +53,7 @@
                 android:hint="@string/email"
                 android:ems="10"
                 android:autofillHints="@string/email"
-                 />
+                android:inputType="text"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,7 +70,8 @@
                 android:background="@drawable/bgedittext"
                 android:ems="10"
                 android:hint="@string/password"
-                android:autofillHints="@string/password" />
+                android:autofillHints="@string/password"
+                android:inputType="textPassword" />
 
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -85,9 +85,9 @@
                 android:layout_marginTop="32dp"
                 android:onClick="Login"
                 android:background="@drawable/bg_btn"
-                android:text="sign In"
+                android:text="@string/login"
                 android:textColor="#FFFFFF"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -99,7 +99,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/message"
+                    android:text="@string/register_message"
                     android:textColor="#363636"
                     android:textSize="16sp" />
 
@@ -108,11 +108,11 @@
                     android:clickable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
-                    android:text="Sign Up"
+                    android:text="@string/register_button"
                     android:textColor="#FF6B00"
                     android:onClick="moveToRegistration"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:focusable="true" />
 
 
 
