--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:hint="@string/rohit_sharma"
+            android:hint="@string/amiverse"
             android:autofillHints="no"
             android:inputType="text" />
 
