--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -1,286 +1,219 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".club_activity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".club_activity">
 
     <include
-        layout="@layout/toolbar"
         android:id="@+id/toolbar"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="10dp"
-        android:orientation="horizontal"
-        android:paddingStart="20dp"
-        android:paddingLeft="20dp"
-        android:paddingEnd="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        tools:ignore="UseCompoundDrawables">
+        layout="@layout/toolbar" />
 
-        <ImageView
-            android:layout_width="108dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/official_logo"
-            android:contentDescription="@string/amity_logo" />
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="373dp"
+        android:layout_height="72dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginLeft="22dp"
+        android:layout_marginTop="83dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="576dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
 
         <TextView
             android:id="@+id/club_aump"
-            android:layout_width="match_parent"
+            android:layout_width="291dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_margin="10dp"
             android:fontFamily="sans-serif-black"
-            android:paddingStart="5dp"
-            android:paddingLeft="15dp"
-            android:paddingTop="10dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="20dp"
-            android:layout_marginLeft="10dp"
             android:text="@string/aump_clubs"
-            android:textColor="@color/darkyellow"
-            android:textColorHighlight="@color/colorAccent"
-            android:textSize="28sp"
-            android:textStyle="bold"
-            android:paddingEnd="5dp"
-            android:layout_marginStart="10dp" />
+            android:textColor="@color/navyblue"
+            android:textSize="20sp"
+            tools:layout_editor_absoluteX="35dp"
+            tools:layout_editor_absoluteY="78dp" />
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/amity_logo"
+            android:src="@drawable/official_logo"
+            tools:layout_editor_absoluteX="292dp"
+            tools:layout_editor_absoluteY="69dp" />
+
     </LinearLayout>
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/colorPrimary"/>
-
-
-
-
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="30dp"
-        app:cardCornerRadius="3dp"
-        android:layout_marginRight="30dp"
-        app:cardBackgroundColor="@color/wafer">
+        android:id="@+id/club1"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/club2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/club_img"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:contentDescription="@string/todo"
+                android:src="@drawable/club" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/title1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@string/acc"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/des1"
+                    android:layout_width="239dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/upgrade_your_technical_skills"
+                    android:textSize="18sp"
+                    android:textStyle="normal"
+                    tools:layout_editor_absoluteX="35dp"
+                    tools:layout_editor_absoluteY="247dp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/club2"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/club3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/eco_club2"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:contentDescription="@string/todo"
+                android:src="@drawable/eco" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:orientation="vertical"
-                tools:ignore="UselessParent">
+                android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/title2"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="vertical">
+                    android:gravity="center_horizontal"
+                    android:text="@string/eco_club"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/title1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/acc"
-                        android:textAlignment="center"
-                        android:textColor="@color/navyblue"
-                        android:textSize="30sp"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:id="@+id/club_img"
-                        android:layout_width="90dp"
-                        android:layout_height="80dp"
-                        android:layout_marginStart="250dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:contentDescription="@string/todo"
-                        android:src="@drawable/club" />
-
-                    <TextView
-                        android:id="@+id/des1"
-                        android:layout_width="239dp"
-                        android:layout_height="69dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="-90dp"
-                        android:layout_marginEnd="100dp"
-                        android:layout_marginRight="5dp"
-                        android:gravity="center_horizontal"
-                        android:text="@string/upgrade_your_technical_skills"
-                        android:textAlignment="center"
-                        android:textSize="20sp"
-                        android:textStyle="normal" />
-
-
-                </LinearLayout>
-
+                <TextView
+                    android:id="@+id/des2"
+                    android:layout_width="239dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/participate_in_eco_drives_and_enrich_environment_knowledge"
+                    android:textSize="18sp"
+                    android:textStyle="normal"
+                    tools:layout_editor_absoluteX="35dp"
+                    tools:layout_editor_absoluteY="247dp" />
 
             </LinearLayout>
 
         </LinearLayout>
-
-
-    </androidx.cardview.widget.CardView>
-
-
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="30dp"
-        app:cardCornerRadius="3dp"
-        android:layout_marginRight="30dp"
-        app:cardBackgroundColor="@color/wafer">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                tools:ignore="UselessParent">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/title2"
-                        android:layout_width="249dp"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/eco_club"
-                        android:textAlignment="center"
-                        android:textColor="@color/navyblue"
-                        android:textSize="30sp"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:id="@+id/eco_club2"
-                        android:layout_width="90dp"
-                        android:layout_height="80dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:src="@drawable/eco"
-                        android:layout_marginStart="250dp"
-                        android:contentDescription="@string/todo" />
-
-                    <TextView
-                        android:id="@+id/des2"
-                        android:layout_width="232dp"
-                        android:layout_height="86dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="-90dp"
-                        android:layout_marginEnd="100dp"
-                        android:layout_marginRight="5dp"
-                        android:gravity="center_horizontal"
-                        android:text="@string/participate_in_eco_drives_and_enrich_environment_knowledge"
-                        android:textAlignment="center"
-                        android:textSize="20sp"
-                        android:textStyle="normal" />
-
-
-                </LinearLayout>
-
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-
 
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="30dp"
-        app:cardBackgroundColor="@color/wafer"
-        app:cardCornerRadius="3dp">
+
+        android:id="@+id/club3"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/club2"
+        >
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/parikalp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:contentDescription="@string/todo"
+                android:src="@drawable/parikalp" />
+
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                tools:ignore="UselessParent">
+                android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/title3"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:gravity="center_horizontal"
+                    android:text="@string/literature_club"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/title3"
-                        android:layout_width="257dp"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/literature_club"
-                        android:textAlignment="center"
-                        android:textColor="@color/navyblue"
-                        android:textSize="30sp"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:id="@+id/parikalp"
-                        android:layout_width="90dp"
-                        android:layout_height="80dp"
-                        android:layout_marginStart="250dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:contentDescription="@string/todo"
-                        android:src="@drawable/parikalp" />
-
-
-                    <TextView
-                        android:id="@+id/des3"
-                        android:layout_width="232dp"
-                        android:layout_height="86dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="-90dp"
-                        android:layout_marginEnd="100dp"
-                        android:gravity="center_horizontal"
-                        android:text="@string/enhance_explore_and_express_the_love_for_literature"
-                        android:textAlignment="center"
-                        android:textSize="20sp"
-                        android:textStyle="normal"
-                        android:layout_marginRight="70dp" />
-
-
-                </LinearLayout>
-
+                <TextView
+                    android:id="@+id/des3"
+                    android:layout_width="239dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/enhance_explore_and_express_the_love_for_literature"
+                    android:textSize="18sp"
+                    android:textStyle="normal"
+                    tools:layout_editor_absoluteX="35dp"
+                    tools:layout_editor_absoluteY="247dp" />
 
             </LinearLayout>
 
         </LinearLayout>
 
-
     </androidx.cardview.widget.CardView>
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
