xml layout of activity_admin_login.xml activity_club.xml activity_registration.xml activity_login.xml changed java file of LoginActivity.java changed (ed_email) no warnings except unidentified attributes in xml 0 errors

--- a/app/src/main/res/layout/activity_quick_links.xml
+++ b/app/src/main/res/layout/activity_quick_links.xml
@@ -108,7 +108,7 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/ic_placement"
+                    android:src="@drawable/gold"
                     android:contentDescription="@string/app_name" />
 
                 <TextView
