--- a/app/src/main/res/drawable/bgedittext.xml
+++ b/app/src/main/res/drawable/bgedittext.xml
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <solid android:color="#F4F6F9"></solid>
-
-    <corners android:radius="48dp"></corners>
+    <corners android:radius="20dp" />
+    <stroke android:color="#ffffff" android:width="1dp" />
+    <solid android:color="#FBFBFB" />
 </shape>
