--- a/app/src/main/res/layout/activity_eforms_main.xml
+++ b/app/src/main/res/layout/activity_eforms_main.xml
@@ -1,169 +1,182 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:context=".eFormsMain"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:orientation="vertical"
-    >
-    <include
-        layout="@layout/toolbar"
-        android:id="@+id/toolbar"
-        />
+    tools:context=".eFormsMain">
+
     <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_margin="10dp"
-    android:orientation="horizontal"
-    android:paddingStart="20dp"
-    android:paddingLeft="20dp"
-    android:paddingTop="5dp"
-    android:paddingEnd="20dp"
-    android:paddingRight="20dp"
-    android:paddingBottom="5dp"
-    tools:ignore="UseCompoundDrawables">
-
-    <ImageView
-        android:layout_width="108dp"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/amity_logo"
-
-        android:src="@drawable/official_logo" />
-
-        <TextView
-            android:id="@+id/upcoming_events"
-            android:layout_width="wrap_content"
-            android:layout_height="128dp"
-            android:layout_gravity="start"
-            android:layout_margin="10dp"
-            android:fontFamily="sans-serif-black"
-            android:paddingStart="5dp"
-            android:paddingLeft="5dp"
-            android:paddingTop="15dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="20dp"
-            android:text="@string/e_forms"
-            android:textColor="@color/colorBack"
-            android:textColorHighlight="@color/colorAccent"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-</LinearLayout>
-
-    <TableRow
-
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/colorPrimary"
-
-        />
-
-
-    <ScrollView
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        android:layout_marginBottom="70dp">
 
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"
+            app:srcCompat="@drawable/menu"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="87dp" />
+
+        <TextView
+            android:id="@+id/club_aump"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:text="@string/e_forms"
+            android:textColor="@color/navyblue"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:contentDescription="@string/amity_logo"
+            android:src="@drawable/official_logo"
+            />
+
+    </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/form1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:cardElevation="20dp"
+        app:cardCornerRadius="10dp"
+        android:layout_marginBottom="30dp"
         >
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:text="@string/date"
+                android:textColor="#000000"
+                android:background="@drawable/calendar"
+                android:textSize="15sp"
+                android:gravity="center" />
+
+        <LinearLayout
             android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:padding="5dp"
                 android:text="@string/coding_competition"
-
-
                 android:textColor="#000000"
-                android:textSize="25sp"
-                android:textStyle="normal" />
+                android:textSize="20sp"
+                android:layout_gravity="left"/>
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="#EAA27E"
-                android:padding="5dp"
                 android:text="@string/organiser_mr_dinesh_sharma"
-
-                android:textSize="20sp" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="#EAA27E"
-                android:padding="5dp"
-                android:text="@string/department_aset_cse"
-
-                android:textSize="20sp" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="#EAA27E"
-                android:padding="5dp"
-                android:text="@string/date_1_june_2020"
-
-                android:textSize="20sp" />
-
-
-
-                <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:padding="5dp"
-                android:text="@string/android_development_webinar"
-                android:textColor="#000000"
-                android:textSize="25sp"
-                android:textStyle="normal" />
+                android:textSize="16sp"
+                android:layout_gravity="left"/>
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="#EAA27E"
-                android:padding="5dp"
-                android:text="@string/organiser_mr_dinesh_sharma"
-
-                android:textSize="20sp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="#EAA27E"
-
-                android:text="@string/department_aset_cse"
-
-                android:textSize="20sp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="#EAA27E"
-                android:padding="5dp"
-                android:text="@string/date_24_may_2020"
-                android:textSize="20sp"/>
+                android:text="@string/dept"
+                android:textSize="16sp"
+                android:layout_gravity="left"/>
 
             <Button
-                android:id="@+id/oval"
-                android:layout_width="200dp"
+                android:id="@+id/oval1"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:background="@drawable/oval"
                 android:text="@string/register_button"
-                android:textColor="#ffffff">
+                android:layout_gravity="center"
+                android:textColor="#ffffff"/>
 
-            </Button>
+        </LinearLayout>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/form2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:cardElevation="20dp"
+        app:cardCornerRadius="10dp"
+        android:layout_marginBottom="30dp"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:text="@string/date2"
+                android:textColor="#000000"
+                android:background="@drawable/calendar"
+                android:textSize="15sp"
+                android:gravity="center" />
+
+            <LinearLayout
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/android_development_webinar"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/organiser_mr_dinesh_sharma"
+                    android:textSize="16sp"
+                    android:layout_gravity="left"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dept"
+                    android:textSize="16sp"
+                    android:layout_gravity="left"/>
+
+                <Button
+                    android:id="@+id/oval2"
+                    android:layout_width="202dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/oval"
+                    android:text="@string/register_button"
+                    android:textColor="#ffffff">
+
+                </Button>
+            </LinearLayout>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
 
 
         </LinearLayout>
-    </ScrollView>
-
-
-</LinearLayout>
