--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -1,72 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".gallery"
-    android:orientation="vertical">
-
-    <include
-        layout="@layout/toolbar"
-        android:id="@+id/toolbar"
-        />
-
-
-    <LinearLayout
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="10dp"
-        android:orientation="horizontal"
-        android:paddingStart="20dp"
-        android:paddingLeft="20dp"
-        android:paddingEnd="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        tools:ignore="UseCompoundDrawables"
-
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        tools:context=".gallery"
         >
 
-        <ImageView
-            android:layout_width="108dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/official_logo"
-            android:contentDescription="@string/app_name" />
-
-        <TextView
-
+        <LinearLayout
+            android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
-            android:paddingTop="15dp"
-            android:paddingStart="5dp"
-            android:paddingRight="5dp"
-            android:paddingLeft="5dp"
-            android:paddingBottom="20dp"
-            android:layout_margin="10dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:text="@string/amigallery"
-            android:textColorHighlight="@color/colorAccent"
-            android:textColor="@color/colorBack"
-            android:textSize="28sp"
-            android:fontFamily="sans-serif-black"
-            android:textStyle="bold"
-            />
-    </LinearLayout>
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+            android:layout_marginBottom="70dp">
 
-    <TableRow
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/app_name"
+                app:srcCompat="@drawable/menu"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="87dp" />
 
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/colorPrimary"
-        />
+            <TextView
+                android:id="@+id/club_aump"
+                android:layout_width="240dp"
+                android:layout_height="wrap_content"
+                android:text="@string/amigallery"
+                android:textColor="@color/navyblue"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:contentDescription="@string/amity_logo"
+                android:src="@drawable/official_logo"
+                />
+
+        </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="edmt.dev.androidgridlayout.MainActivity">
-
-
 
         <LinearLayout
             android:orientation="vertical"
