--- a/app/src/main/res/layout/activity_home_main.xml
+++ b/app/src/main/res/layout/activity_home_main.xml
@@ -1,62 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_gravity="center"
+    android:orientation="vertical"
     tools:context=".HomeMain"
-    android:orientation="vertical">
-    <include
-        layout="@layout/toolbar"
-        android:id="@+id/toolbar"
-        />
-
+    >
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:paddingStart="20dp"
-        android:paddingLeft="20dp"
-        android:paddingEnd="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        tools:ignore="UseCompoundDrawables">
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        >
 
         <ImageView
-            android:layout_width="108dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/official_logo"
-            android:contentDescription="@string/amity_logo" />
+            android:id="@+id/imageView2"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"
+            app:srcCompat="@drawable/menu"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="87dp" />
 
         <TextView
-            android:id="@+id/amity_quick_link"
-            android:layout_width="match_parent"
-            android:paddingTop="15dp"
-            android:paddingStart="5dp"
-            android:paddingRight="5dp"
-            android:paddingLeft="5dp"
-            android:paddingBottom="20dp"
-            android:layout_margin="10dp"
+            android:id="@+id/club_aump"
+            android:layout_width="240dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
             android:text="@string/amihome"
-            android:textColorHighlight="@color/colorAccent"
-            android:textColor="@color/colorBack"
-            android:textSize="28sp"
-            android:fontFamily="sans-serif-black"
-            android:textStyle="bold"
+            android:textColor="@color/navyblue"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:contentDescription="@string/amity_logo"
+            android:src="@drawable/official_logo"
             />
+
     </LinearLayout>
-
-    <TableRow
-
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/colorPrimary"
-        />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -336,47 +324,6 @@
 
                 </androidx.cardview.widget.CardView>
 
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginBottom="16dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp"
-                    tools:targetApi="lollipop">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:layout_margin="16dp"
-                        android:orientation="vertical"
-                        tools:ignore="UseCompoundDrawables">
-
-                        <ImageView
-                            android:id="@+id/h_campustour"
-                            android:layout_width="90dp"
-                            android:layout_height="86dp"
-                            android:layout_gravity="center_horizontal"
-                            android:contentDescription="@string/aump_clubs"
-                            android:src="@drawable/ic_tour" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/Campustour"
-                            android:textColor="@android:color/black"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
                 <androidx.cardview.widget.CardView
                     android:layout_width="0dp"
                     android:layout_height="0dp"
@@ -459,6 +406,17 @@
 
 
             </GridLayout>
-</LinearLayout>
+
+            <Button
+                android:id="@+id/campustour"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Campus 360 Tour"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:background="@drawable/button"
+                />
+
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
