--- a/app/src/main/res/layout/activity_hostel_complaint.xml
+++ b/app/src/main/res/layout/activity_hostel_complaint.xml
@@ -1,60 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:orientation="vertical"
     tools:context=".HomeMain">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
-
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:paddingStart="20dp"
-        android:paddingLeft="20dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="20dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="5dp"
-        tools:ignore="UseCompoundDrawables">
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        android:layout_marginBottom="70dp">
 
         <ImageView
-            android:layout_width="108dp"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/amity_logo"
-            android:src="@drawable/official_logo" />
+            android:id="@+id/imageView2"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"
+            app:srcCompat="@drawable/menu"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="87dp" />
 
         <TextView
-            android:id="@+id/amity_hostel"
-            android:layout_width="match_parent"
+            android:id="@+id/club_aump"
+            android:layout_width="240dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_margin="10dp"
-            android:fontFamily="sans-serif-black"
-            android:paddingStart="5dp"
-            android:paddingLeft="5dp"
-            android:paddingTop="15dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="20dp"
             android:text="Complaint"
-            android:textColor="@color/colorBack"
-            android:textColorHighlight="@color/colorAccent"
-            android:textSize="28sp"
+            android:textColor="@color/navyblue"
+            android:textSize="20sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:contentDescription="@string/amity_logo"
+            android:src="@drawable/official_logo"
+            />
+
     </LinearLayout>
 
-    <TableRow
-
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/colorPrimary" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
