--- a/app/src/main/res/layout/activity_leadership.xml
+++ b/app/src/main/res/layout/activity_leadership.xml
@@ -1,235 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:orientation="vertical"
     tools:context=".Leadership_Activity"
-    android:orientation="vertical">
-
-    <include
-        layout="@layout/toolbar"
-        android:id="@+id/toolbar"
-        />
+    >
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:paddingStart="20dp"
-        android:paddingLeft="20dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="20dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="5dp"
-        tools:ignore="UseCompoundDrawables">
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        android:layout_marginBottom="30dp">
 
         <ImageView
-            android:layout_width="108dp"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/amity_logo"
-
-            android:src="@drawable/official_logo" />
+            android:id="@+id/imageView2"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"
+            app:srcCompat="@drawable/menu"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="87dp" />
 
         <TextView
-            android:id="@+id/upcoming_events"
-            android:layout_width="wrap_content"
-            android:layout_height="128dp"
-            android:layout_gravity="start"
-            android:layout_margin="10dp"
-            android:fontFamily="sans-serif-black"
-            android:paddingStart="5dp"
-            android:paddingLeft="5dp"
-            android:paddingTop="15dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="20dp"
+            android:id="@+id/club_aump"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
             android:text="@string/leadership"
-            android:textColor="@color/colorBack"
-            android:textColorHighlight="@color/colorAccent"
-            android:textSize="25sp"
+            android:textColor="@color/navyblue"
+            android:textSize="20sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:contentDescription="@string/amity_logo"
+            android:src="@drawable/official_logo"
+            />
 
     </LinearLayout>
 
-    <TableRow
-
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/colorPrimary"
-
-        />
-
-<GridLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@color/navyblue">
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_view1"
-        android:layout_width="match_parent"
-        android:layout_height="232dp"
-        card_view:cardBackgroundColor="@color/navyblue"
-        card_view:cardCornerRadius="10dp"
-        card_view:cardElevation="5dp"
-        card_view:cardUseCompatPadding="true">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="185dp"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="30dp">
 
-            <ImageView
-                android:id="@+id/imgleader1"
-                android:contentDescription="@string/nameleader1"
-                android:layout_width="0dp"
-                android:layout_height="140dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:src="@drawable/vksharmaa"
-                android:tag="image_tag" />
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="247dp"
-                android:layout_marginTop="12dp"
-                android:layout_weight="2"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/nameleader1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:fontFamily="sans-serif"
-                    android:text="@string/nameleader1"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/textleader1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:fontFamily="sans-serif"
-                    android:text="@string/leader1design"
-                    android:textColor="@color/colorBack"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <ScrollView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/descleader1"
-                        android:layout_width="match_parent"
-                        android:layout_height="173dp"
-                        android:gravity="start"
-                        android:fontFamily="sans-serif"
-                        android:scrollbarAlwaysDrawVerticalTrack="true"
-                        android:text="@string/descleader1"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/white"
-                        android:textSize="18sp"
-                        android:textStyle="normal" />
-                </ScrollView>
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-
-    </androidx.cardview.widget.CardView>
-
-</GridLayout>
-
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/navyblue">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_view2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            card_view:cardBackgroundColor="@color/navyblue"
-            card_view:cardCornerRadius="10dp"
-            card_view:cardElevation="5dp"
-            card_view:cardUseCompatPadding="true">
+        <ImageView
+            android:id="@+id/imgleader1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:contentDescription="@string/nameleader1"
+            android:src="@drawable/vksharmaa"
+            android:tag="image_tag"
+             />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="205dp"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imgleader2"
-                    android:layout_width="0dp"
-                    android:contentDescription="@string/nameleader2"
-                    android:layout_height="140dp"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/mpkaushik"
-                    android:tag="image_tag" />
+
+            <TextView
+                android:id="@+id/nameleader1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:text="@string/nameleader1"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                 />
+
+
+            <TextView
+                android:id="@+id/textleader1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:text="@string/leader1design"
+                android:textColor="@color/colorBack"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                 />
+
+        <TextView
+            android:id="@+id/descleader1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:text="@string/descleader1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="normal"
+             />
+            </LinearLayout>
+
+        </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+
+        <ImageView
+            android:id="@+id/imgleader2"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:contentDescription="@string/nameleader2"
+            android:src="@drawable/mpkaushik"
+             />
 
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="247dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_weight="2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/nameleader2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="start"
                         android:fontFamily="sans-serif"
                         android:text="@string/nameleader2"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:textSize="20sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        />
 
                     <TextView
                         android:id="@+id/textleader2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="start"
                         android:fontFamily="sans-serif"
                         android:text="@string/leader2design"
                         android:textColor="@color/colorBack"
                         android:textSize="20sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        />
 
-                    <ScrollView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/descleader2"
-                            android:gravity="start"
-                            android:layout_width="match_parent"
-                            android:layout_height="173dp"
-                            android:fontFamily="sans-serif"
-                            android:scrollbarAlwaysDrawVerticalTrack="true"
-                            android:text="@string/descleader2"
-                            android:textColor="@color/white"
-                            android:textSize="18sp"
-                            android:textStyle="normal" />
-                    </ScrollView>
+        <TextView
+            android:id="@+id/descleader2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:text="@string/descleader2"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="normal"
+            />
 
                 </LinearLayout>
-
-
             </LinearLayout>
-
-
-        </androidx.cardview.widget.CardView>
-
-    </GridLayout>
-
-
+    </LinearLayout>
 </LinearLayout>
