--- a/app/src/main/res/layout/admin_scoreboard.xml
+++ b/app/src/main/res/layout/admin_scoreboard.xml
@@ -1,22 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:padding="10dp"
+    android:layout_gravity="center"
+    android:orientation="vertical"
     tools:context=".Adminscoreboard">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_marginBottom="70dp">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"
+            app:srcCompat="@drawable/menu"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="87dp" />
+
+        <TextView
+            android:id="@+id/club_aump"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:text="@string/scoreboard"
+            android:textColor="@color/navyblue"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:contentDescription="@string/amity_logo"
+            android:src="@drawable/official_logo"
+            />
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
-        android:background="@color/white"
         android:padding="10dp"
         android:text="@string/Block"
         android:textSize="20sp"
@@ -36,7 +68,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
-        android:background="@color/white"
         android:padding="10dp"
         android:text="@string/Gold_medal"
         android:textSize="20sp"
@@ -61,7 +92,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="190dp"
-        android:background="@color/white"
         android:padding="10dp"
         android:text="@string/Silver_medal"
         android:textSize="20sp"
@@ -85,7 +115,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="250dp"
-        android:background="@color/white"
         android:padding="10dp"
         android:text="@string/Bronze_medal"
         android:textSize="20sp"
@@ -110,7 +139,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="310dp"
-        android:background="@color/white"
         android:padding="10dp"
         android:text="@string/Score"
         android:textSize="20sp"
@@ -140,8 +168,6 @@
         android:layout_marginRight="35dp"
         android:background="@color/yellow"
         android:text="@string/submit"
-        android:textSize="30sp"
-
-        android:textStyle="italic" />
+        android:textSize="20sp" />
 
 </RelativeLayout>
